crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__lambda_default_parameters.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/lambda_default_parameters.py
---
## AST

 ```
Module(
    ModModule {
        range: 0..93,
        body: [
            Expr(
                StmtExpr {
                    range: 72..92,
                    value: Lambda(
                        ExprLambda {
                            range: 72..92,
                            parameters: Some(
                                Parameters {
                                    range: 79..89,
                                    posonlyargs: [],
                                    args: [
                                        ParameterWithDefault {
                                            range: 79..80,
                                            parameter: Parameter {
                                                range: 79..80,
                                                name: Identifier {
                                                    id: "a",
                                                    range: 79..80,
                                                },
                                                annotation: None,
                                            },
                                            default: None,
                                        },
                                        ParameterWithDefault {
                                            range: 82..86,
                                            parameter: Parameter {
                                                range: 82..83,
                                                name: Identifier {
                                                    id: "b",
                                                    range: 82..83,
                                                },
                                                annotation: None,
                                            },
                                            default: Some(
                                                NumberLiteral(
                                                    ExprNumberLiteral {
                                                        range: 84..86,
                                                        value: Int(
                                                            20,
                                                        ),
                                                    },
                                                ),
                                            ),
                                        },
                                        ParameterWithDefault {
                                            range: 88..89,
                                            parameter: Parameter {
                                                range: 88..89,
                                                name: Identifier {
                                                    id: "c",
                                                    range: 88..89,
                                                },
                                                annotation: None,
                                            },
                                            default: None,
                                        },
                                    ],
                                    vararg: None,
                                    kwonlyargs: [],
                                    kwarg: None,
                                },
                            ),
                            body: NumberLiteral(
                                ExprNumberLiteral {
                                    range: 91..92,
                                    value: Int(
                                        1,
                                    ),
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # TODO(micha): The offset of the generated error message is off by one.
2 | lambda a, b=20, c: 1
  |                  ^ Syntax Error: non-default argument follows default argument
  |



